<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_weight="1" >
        
        <TextView
            android:id="@+id/rowtext1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Transparency" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:max="255" />

        <TextView
            android:id="@+id/percent1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dip"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >
        
        <TextView
            android:id="@+id/rowtext2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Red" />
        
        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:max="255" />
        
        <TextView
            android:id="@+id/percent2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dip"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >
        
        <TextView
            android:id="@+id/rowtext3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Green" />
        
        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:max="255" />
        
        <TextView
            android:id="@+id/percent3"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dip"
            android:textSize="16sp" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >
        
        <TextView
            android:id="@+id/rowtext4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Blue" />
        
        <SeekBar
            android:id="@+id/seekBar4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:max="255" />
        
        <TextView
            android:id="@+id/percent4"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dip"
            android:textSize="16sp" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/bSetsettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/SetNewBgColor" />

    </TableRow>

</TableLayout>
